--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>MASH GAME</title>
     <link href="" rel="stylesheet">
     <link href="" rel="stylesheet">
+    <input type="text">
   </head>
   <!-- HEAD SECTION ENDS -->
 
