--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="description">Fill in the blanks to make one sentence.</p>
     <form action="" method="post" id="mash">
       <div id="answers" class="hide">
-        <p>I live in a <span name="place[]"></span> with a <span id="animal[]"></span> and my job is a <span id="career[]"></span>.
+        <p>I live in a <span id="place"></span> with a <span id="animal"></span> and my job is a <span id="career"></span>.
       </div>
       <div class="bucket">
         <div class="text-bucket">
