--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <button type="submit" class="button-submit">Generate sentence!</button>
     </form>  
-    <script src=""></script>
+    <script src="script.js"></script>
   </body>
   <!-- BODY SECTION ENDS -->
   <!-- 2024 New Course -->
