--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- BODY SECTION STARTS -->
   <body>
     <h1>MASH</h1>
-    <p class="description">Fill in the blanks to make one sentence.</p>
+    <p class="description">Answer the questions with four answers to make one sentence.</p>
     <form action="" method="post" id="mash">
       <div id="answers" class="hide">
         <p>I live in a <span id="place"></span> with a <span id="animal"></span> and my job is a <span id="career"></span>.
