--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <!-- BODY SECTION STARTS -->
   <body>
     <h1>MASH</h1>
-    <p class="description">Follow the directions to make one sentence and predict your fortune.</p>
+    <p class="description">Follow the directions to predict your future and fortune.</p>
     <form action="" method="post" id="mash">
       <div id="answers" class="hide">
-        <p>I live in a <span id="place"></span> with a <span id="animal"></span> and my job is a <span id="career"></span>. And you'll have <span id= playing></span> fortune.
+        <p>You'll live in a <span id="place"></span> with a <span id="animal"></span> and you'll work as a(n) <span id="career"></span>. You'll have <span id= playing></span> fortune.
       </div>
       <div class="bucket">
         <div class="text-bucket">
